--- a/style.css
+++ b/style.css
@@ -164,3 +164,12 @@ footer{
 
 
 }
+.carousel-caption {
+  font-size: 24px;
+}
+
+@media (max-width: 768px) {
+  .carousel-caption {
+    font-size: 16px !important;
+  }
+}
