changed hover effect

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Akronim&family=Playfair:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Akronim&family=New+Rocker&family=Playfair:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Playfair:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Pathway+Gothic+One&family=Playfair:wght@300&display=swap');
 html,
 body {
   background-color: rgb(0, 0, 0);
@@ -56,6 +57,9 @@ li {
   font-size: 21px;
   cursor: pointer;
   transition: color 200ms;
+  /* font-family: "New Rocker", cursive; */
+  /* font-family: 'Pathway Gothic One', sans-serif; */
+  /* font-size: 32px; */
   
 }
 
@@ -65,6 +69,7 @@ li:hover {
 
 span {
   font-size: 21px;
+  /* font-size: 32px; */
 }
 
 figure {
@@ -194,7 +199,7 @@ footer{
 }
 
 .phone:hover, .facebook:hover, .instagram:hover{
-  color: rgb(255, 255, 255);
+  color: rgb(143, 0, 0);
 }
 
 
