--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ color: black;
 
 main {
   background-image: url("images/chopsticks.jpg");
-  filter: grayscale(0.6);
+  /* filter: grayscale(0.6); */
   background-position: center;
   background-size: cover;
   padding: 25px;
@@ -113,11 +113,11 @@ main {
   gap: 10px;
   background-color: rgba(255, 255, 255, 0.774);
   color: rgb(0, 0, 0);
-  width: max-content;
+  
   padding: 10px;
   border-radius: 10px;
-  /* width: 300px; */
-  height: max-content;
+  width: 300px;
+  /* height: max-content; */
   font-family: "New Rocker", cursive;
 
 }
@@ -165,8 +165,12 @@ main {
 .map{
   /* width: 400px;
   height: 400px; */
+  /* border-radius: 50%; */
   border-radius: 10px;
 }
+
+
+
 
 footer{
 /* height: 100%; */
