--- a/style.css
+++ b/style.css
@@ -184,11 +184,16 @@ footer{
   font-size: 26px;
   color: rgb(30, 193, 98);
   transition: color 300ms;
+  width: min-content;
+  height: max-content;
 }
 
 .phone-color{
   color: rgb(30, 193, 98);
   transition: color 300ms;
+  width: min-content;
+  height: max-content;
+
 }
 
 .facebook {
@@ -234,11 +239,15 @@ footer{
   /* background-color: rgb(255, 255, 255);
   border-radius: 10px; */
   cursor: pointer;
+  width: min-content;
+  height: max-content;
 }
 
 .yelp-color{
   color: rgb(234, 16, 0);
   transition: color 300ms;
+  width: min-content;
+
 }
 
 .phone-color:hover, .facebook:hover, .instagram:hover, .yelp-color:hover{
