--- a/style.css
+++ b/style.css
@@ -185,8 +185,8 @@ footer{
   font-size: 26px;
   color: rgb(30, 193, 98);
   transition: color 300ms;
-  width: min-content;
-  height: max-content;
+  /* width: min-content;
+  height: max-content; */
 }
 
 .phone-color{
@@ -300,7 +300,10 @@ footer{
     color: rgb(30, 193, 98);
     /* margin-top: 40px; */
     /* margin-left: 30px; */
-    width: min-content;
+
+
+
+    /* width: min-content; */
   }
   
   .facebook {
