--- a/style.css
+++ b/style.css
@@ -3,12 +3,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Akronim&family=New+Rocker&family=Playfair:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Playfair:wght@300&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Pathway+Gothic+One&family=Playfair:wght@300&display=swap');
+
 html,
 body {
   background-color: rgb(0, 0, 0);
   margin: 0;
-  /* height: 100vh; */
-  /* overflow-x: hidden; */
   background-color: black;
 }
 
@@ -30,16 +29,15 @@ nav {
 /* Initial styles for the logo */
 #logo {
   width: 200px;
-  height: auto;
+  /* height: auto; */
+  height: 114px;
   transition: width 0.3s ease-in-out; /* Add a transition effect */
 }
 
 /* Styles for the smaller logo */
-#logo.shrink {
+/* #logo.shrink {
   width: 100px;
-}
-
-
+} */
 
 .page-links {
   display: flex;
@@ -48,7 +46,6 @@ nav {
   margin-top: 60px;
   margin-right: 60px;
   color: white;
-  
 }
 
 li {
@@ -57,10 +54,6 @@ li {
   font-size: 21px;
   cursor: pointer;
   transition: color 200ms;
-  /* font-family: "New Rocker", cursive; */
-  /* font-family: 'Pathway Gothic One', sans-serif; */
-  /* font-size: 32px; */
-  
 }
 
 li:hover {
@@ -69,7 +62,6 @@ li:hover {
 
 span {
   font-size: 21px;
-  /* font-size: 32px; */
 }
 
 figure {
@@ -93,7 +85,6 @@ color: black;
 
 main {
   background-image: url("images/chopsticks.jpg");
-  /* filter: grayscale(0.6); */
   background-position: center;
   background-size: cover;
   padding: 25px;
@@ -113,11 +104,9 @@ main {
   gap: 10px;
   background-color: rgba(255, 255, 255, 0.774);
   color: rgb(0, 0, 0);
-  
   padding: 10px;
   border-radius: 10px;
   width: 300px;
-  /* height: max-content; */
   font-family: "New Rocker", cursive;
 
 }
@@ -146,15 +135,12 @@ main {
 }
 
 .over-lay {
-  font-family: "Akronim", cursive;
   font-family: "New Rocker", cursive;
-  /* font-family: fantasy; */
   font-weight: 100;
   position: absolute;
   background-color: rgba(0, 0, 0, 0.437);
   color: rgb(255, 255, 255);
   width: 100%;
-  /* text-shadow: red 0px -2px; */
 }
 
 .copy-right{
@@ -164,9 +150,6 @@ main {
 }
 
 .map{
-  /* width: 400px;
-  height: 400px; */
-  /* border-radius: 50%; */
   border-radius: 10px;
 }
 
@@ -185,8 +168,8 @@ footer{
   font-size: 26px;
   color: rgb(30, 193, 98);
   transition: color 300ms;
-  /* width: min-content;
-  height: max-content; */
+  width: min-content;
+  height: max-content;
 }
 
 .phone-color{
@@ -300,10 +283,7 @@ footer{
     color: rgb(30, 193, 98);
     /* margin-top: 40px; */
     /* margin-left: 30px; */
-
-
-
-    /* width: min-content; */
+    width: min-content;
   }
   
   .facebook {
