min content was the problem, changing w and h to 36px

--- a/style.css
+++ b/style.css
@@ -296,7 +296,6 @@ footer{
 }
 
 
-
 @media (max-width: 768px) {
   .carousel-caption {
     font-size: 16px !important;
@@ -358,7 +357,9 @@ footer{
     font-size: 26px;
     color: rgb(30, 193, 98);
     z-index: 4;
-    width: min-content;
-    height: min-content; 
+    /* width: min-content;
+    height: min-content;  */
+    width: 36px;
+    height: 36px;
   }
 }
