Changed margin for links when bigger then phone size

--- a/style.css
+++ b/style.css
@@ -160,25 +160,13 @@ footer{
 /* height: 100%; */
 }
 
-.phone {
-  /* position: fixed;
-  bottom: 0;
-  right: 0;
-  margin: 10px;
-  font-size: 26px;
-  color: rgb(30, 193, 98);
-  transition: color 300ms;
-  width: min-content;
-  height: max-content; */
-}
-
 
 .yelp{
   position: fixed;
   bottom: 0;
   right: 0;
   margin: 12px;
-  margin-right: 60px;
+  margin-right: 150px;
   font-size: 26px;
   color: rgb(106, 149, 235);
   transition: color 300ms;
@@ -189,7 +177,6 @@ footer{
   transition: color 300ms;
   width: min-content;
   height: max-content;
-
 }
 
 .facebook {
@@ -201,23 +188,7 @@ footer{
   font-size: 26px;
   color: rgb(106, 149, 235);
   transition: color 300ms;
-  /* background-color: rgb(255, 255, 255);
-  border-radius: 20px; */
-
-  /* border: solid; */
 }
-
-/* .facebook2 {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  margin: 12px;
-  margin-right: 60px;
-  font-size: 26px;
-  color: rgb(106, 149, 235);
-  transition: color 300ms;
-} */
-
 
 .instagram {
   position: fixed;
@@ -235,7 +206,7 @@ footer{
   bottom: 0;
   right: 0;
   margin: 12px;
-  margin-right: 110px;
+  /* margin-right: 110px; */
   font-size: 26px;
   color: rgb(30, 193, 98);
   transition: color 300ms;
