--- a/style.css
+++ b/style.css
@@ -408,8 +408,24 @@ footer{
 
 .h2-ramen, .h2-toppings{
   border-bottom: black solid;
-  background-color: rgba(255, 255, 255, 0.769);
+  background-color: rgb(255, 255, 255);
   color: black;
+  /* background-image: url('images/dish1.jpg');
+  background-position: center;
+  background-size: cover;
+  height: 200px;
+  
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center; */
+}
+
+.menu-h2-image{
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
 }
 
 
@@ -432,4 +448,47 @@ footer{
 
 }
 
+.food-items-toppings{
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  /* background-image: url('https://images.unsplash.com/photo-1588001291548-948f55922bfd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHJhbWVufGVufDB8MHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60'); */
+  background-color: rgb(255, 255, 255);
+  background-position: center;
+  background-size: cover;
+  /* background-color: rgb(43, 43, 43); */
+  /* background: linear-gradient(to bottom, #333, #333 50%, #eee 75%, #333 75%); */
+  /* background: linear-gradient( #000000, white, black, #880000); */
+  flex-wrap: wrap;
+  /* border: solid black 5px; */
+  padding: 20px;
+  background: transparent;
+  /* background: linear-gradient( white, black, white); */
 
+}
+
+
+
+
+
+
+.image-container {
+  position: relative;
+}
+
+.menu-h2-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.image-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+}
