--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ main {
   padding: 10px;
   border-radius: 10px;
   width: 300px;
+  height: min-content;
   font-family: "New Rocker", cursive;
 
 }
@@ -188,6 +189,8 @@ main {
 
 .map{
   border-radius: 10px;
+  width: 400px;
+  height: 400px;
 }
 
 
@@ -375,6 +378,61 @@ footer{
 
 /* --------------Menu Page------------------- */
 
+/* #menu-nav{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 10px;
+  overflow-x: scroll;
+  text-align: center;
+} */
+
+#menu-nav {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 10px;
+  overflow-x: auto;
+  text-align: center;
+  position: sticky;
+  top: 0;
+  background-color: rgb(255, 255, 255);
+ 
+
+}
+
+#menu-nav ul { 
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  white-space: nowrap; /* Prevent line breaks */
+}
+
+#menu-nav li {
+  display: inline-block;
+  color: rgb(0, 0, 0);
+  position: sticky;
+  top: 0;
+
+}
+
+#menu-nav li:hover{
+  color: rgb(153, 0, 0);
+}
+
+#menu-nav span {
+  margin: 0 5px; /* Adjust the spacing between the separator and the list item */
+}
+
+@media screen and (max-width: 1200px) {
+  #menu-nav {
+    max-width: 100%;
+    justify-content: flex-start;
+    padding: 0 10px;
+    overflow-x: scroll;
+  }
+}
+
 .food-items{
   /* display: flex; */
   /* justify-content: center; */
@@ -460,7 +518,6 @@ footer{
   /* background: linear-gradient(to bottom, #333, #333 50%, #eee 75%, #333 75%); */
   /* background: linear-gradient( #000000, white, black, #880000); */
   flex-wrap: wrap;
-  /* border: solid black 5px; */
   padding: 20px;
   background: transparent;
   /* background: linear-gradient( white, black, white); */
@@ -492,3 +549,63 @@ footer{
   font-weight: bold;
   text-align: center;
 }
+
+
+
+
+
+
+
+.row{
+  background-color: black;
+  width: 700px;
+  height: 500px;
+  overflow: scroll;
+}
+
+.column{
+ 
+  display: flex;
+  justify-content: center;
+}
+
+
+
+
+@media screen and (max-width: 720px) {
+  .row{
+    max-width: 330px;
+    justify-content: flex-start;
+    padding: 0 10px;
+    overflow-x: scroll;
+  }
+  svg{
+    background-color: rgb(0, 0, 0);
+    /* border-radius: 40px; */
+  }
+}
+
+
+
+
+
+
+
+.scroll-link {
+  position: relative;
+}
+
+.scroll-link::before {
+  content: "";
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  z-index: -1;
+}
+
+
+
+
+
