--- a/style.css
+++ b/style.css
@@ -6,9 +6,8 @@
 
 html,
 body {
-  background-color: rgb(0, 0, 0);
   margin: 0;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
 }
 
 nav {
@@ -118,18 +117,93 @@ color: black;
   height: 100%;
 }
 
-main {
-  background-image: url("images/chopsticks.jpg");
+.welcome-message{
+  background-color: rgb(209, 33, 33);
+  background-color: rgb(110, 0, 0);
+  color: rgb(255, 255, 255);
+  font-size: 54px;
+  padding: 20px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border-bottom: black solid;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   background-position: center;
-  background-size: cover;
-  padding: 25px;
+  object-fit: cover;
+
+}
+
+
+
+
+.section-one{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap-reverse;
+  border-bottom: solid black 1px;
+  padding: 0px 20px;
+  background-image: url('images/noodles.jpg');
+  background-position: center;
+  margin-top: -7px
+}
+
+
+.ramen-png{
+  width: 550px;
+  height: 450px;
+  margin-top: -90px;
+  padding: 20px;
+  z-index: 1;
+}
+
+.section-one-h1{
+  border: 5px solid #d3d3d3;
+  padding: 80px 0px;
+  margin: 30px auto;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 900;
+  font-family: arial;
+  position: relative;
+  text-align: center;
+  font-size: 65px;
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  border-radius: 10px;
+  width: 500px;
+  height: 270px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width: 635px) {
+
+  .welcome-message{
+    font-size: 50px;
+  }
+
+  .ramen-png{
+    height: 350px;
+    width: 430px;
+    width: auto;
+    padding-left: 0;
+    margin: auto;
+    margin-top: -90px;
+  }
+
+  .section-one-h1{
+    font-weight: 600;
+  font-size: 45px;
+  height: auto;
+  }
+}
+
+
+
+.section-two{
   display: flex;
   justify-content: space-around;
-  background-color: black;
   flex-wrap: wrap;
-  gap: 20px;
-  /* background: linear-gradient( white, black, white); */
-  
+  padding-top:10px;
 }
 
 
@@ -139,14 +213,15 @@ main {
   flex-direction: column;
   width: min-content;
   gap: 10px;
-  background-color: rgba(255, 255, 255, 0.774);
+  background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   padding: 10px;
   border-radius: 10px;
-  width: 300px;
+  width: 370px;
   height: min-content;
   font-family: "New Rocker", cursive;
-
+  border: solid 1px rgb(135, 135, 135);
+  font-size: 22px;
 }
 
 .category{
@@ -181,17 +256,24 @@ main {
   width: 100%;
 }
 
+.map-container{
+  
+}
+
+.map{
+  border-radius: 10px;
+  width: 370px;
+  height: 370px;
+  background-color: rgb(96, 96, 96);
+  padding: 1px;
+}
+
 .copy-right{
   color: rgb(255, 255, 255);
   text-align: center;
   background-color: rgb(0, 0, 0);
 }
 
-.map{
-  border-radius: 10px;
-  width: 400px;
-  height: 400px;
-}
 
 
 
@@ -302,6 +384,7 @@ footer{
     margin-left: -15px;
   }
 }
+
 .carousel-caption {
   font-size: 24px;
 }
@@ -555,6 +638,49 @@ footer{
 
 
 
+ /* Gallery container */
+ .gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 20px;
+}
+
+/* Gallery item */
+.gallery-item {
+  margin: 10px;
+}
+
+/* Responsive image */
+.gallery-item img {
+  width: 100%;
+  height: auto;
+}
+
+/* Media queries for responsiveness */
+@media screen and (min-width: 480px) {
+  .gallery-item {
+    flex-basis: 50%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .gallery-item {
+    flex-basis: 33.33%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .gallery-item {
+    flex-basis: 25%;
+  }
+}
+
+
+
+
+
+
 
 .row{
   background-color: black;
@@ -579,16 +705,7 @@ footer{
     padding: 0 10px;
     overflow-x: scroll;
   }
-  svg{
-    background-color: rgb(0, 0, 0);
-    /* border-radius: 40px; */
-  }
 }
-
-
-
-
-
 
 
 .scroll-link {
@@ -604,8 +721,5 @@ footer{
   height: 20px;
   z-index: -1;
 }
-
-
-
 
 
