--- a/style.css
+++ b/style.css
@@ -118,17 +118,24 @@ color: black;
 }
 
 .welcome-message{
-  background-color: rgb(209, 33, 33);
+ 
   background-color: rgb(110, 0, 0);
+  /* background-color: rgb(137, 8, 8); */
+  /* background-color: rgb(238, 238, 238); */
   color: rgb(255, 255, 255);
   font-size: 54px;
   padding: 20px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  border-bottom: black solid;
+  /* border-bottom: black solid; */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  background-image: url('');
+  background-position: center;
+
+  background-size: cover;
+
   background-position: center;
   object-fit: cover;
-
+  border-top: rgb(255, 255, 255) solid 1px;
 }
 
 
@@ -136,43 +143,39 @@ color: black;
 
 .section-one{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-wrap: wrap-reverse;
   border-bottom: solid black 1px;
-  padding: 0px 20px;
   background-image: url('images/noodles.jpg');
   background-position: center;
   margin-top: -7px
 }
 
-
 .ramen-png{
-  width: 550px;
-  height: 450px;
+  width: 650px;
+  height: 550px;
   margin-top: -90px;
   padding: 20px;
-  z-index: 1;
 }
 
 .section-one-h1{
-  border: 5px solid #d3d3d3;
-  padding: 80px 0px;
-  margin: 30px auto;
-  border-radius: 50%;
   text-align: center;
-  font-size: 24px;
   font-weight: 900;
   font-family: arial;
-  position: relative;
-  text-align: center;
   font-size: 65px;
-  background-color: rgb(255, 255, 255);
   padding: 20px;
-  border-radius: 10px;
   width: 500px;
   height: 270px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  color: white;
+}
+
+@media screen and (max-width: 990px) {
+
+  .section-one{
+    justify-content: center;
+  }
 }
 
 @media screen and (max-width: 635px) {
@@ -203,6 +206,12 @@ color: black;
   justify-content: space-around;
   flex-wrap: wrap;
   padding-top:10px;
+  gap:20px;
+  /* background-image: url('images/chopsticks.jpg'); */
+background-position: center;
+background-size: cover;
+background: linear-gradient( white, black);
+
 }
 
 
@@ -333,37 +342,6 @@ footer{
   transition: color 300ms;
 }
 
-/* .phone{
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  margin: 12px;
-  margin-right: 110px;
-  font-size: 26px;
-  color: rgb(255, 0, 144);
-  transition: color 300ms;
-} */
-
-/* .yelp {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  margin: 12px;
-  margin-right: 150px;
-  font-size: 26px;
-  color: rgb(234, 16, 0);
-  transition: color 300ms;
-  cursor: pointer;
-  width: min-content;
-  height: max-content;
-} */
-
-/* .yelp-color{
-  color: rgb(234, 16, 0);
-  transition: color 300ms;
-  width: min-content;
-
-} */
 
 .phone-color:hover, .facebook:hover, .instagram:hover, .yelp-color:hover{
   color: rgb(177, 0, 0);
@@ -460,14 +438,6 @@ footer{
 
 /* --------------Menu Page------------------- */
 
-/* #menu-nav{
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 10px;
-  overflow-x: scroll;
-  text-align: center;
-} */
 
 #menu-nav {
   display: flex;
@@ -516,50 +486,20 @@ footer{
 }
 
 .food-items{
-  /* display: flex; */
-  /* justify-content: center; */
   gap: 20px;
-  /* background-color: rgb(43, 43, 43); */
-  /* background: linear-gradient(to bottom, #333, #333 50%, #eee 75%, #333 75%); */
-  
-  /* background: linear-gradient( #000000, white, black, #880000); */
-  /* background: linear-gradient( white, black, white); */
   flex-wrap: wrap;
-  /* border: solid black 5px; */
-  
   background: linear-gradient( white, black, white);
   padding: 20px;
 }
 
-.bla{
-  /* position: absolute; */
-  /* z-index: 3; */
-  width: 300px;
-  height: 200px;
-  margin-top: 70px;
-  cursor: pointer;
-  border: solid 1px rgb(0, 0, 0);
-  transition: border 250ms;
-}
 
-.bla:hover{
-  border: solid 1px white;
-}
+
+
 
 .h2-ramen, .h2-toppings{
   border-bottom: black solid;
   background-color: rgb(255, 255, 255);
   color: black;
-  /* background-image: url('images/dish1.jpg');
-  background-position: center;
-  background-size: cover;
-  height: 200px;
-  
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center; */
 }
 
 .menu-h2-image{
@@ -573,43 +513,25 @@ footer{
   display: flex;
   justify-content: center;
   gap: 30px;
-  /* background-image: url('https://images.unsplash.com/photo-1588001291548-948f55922bfd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHJhbWVufGVufDB8MHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60'); */
   background-color: rgb(255, 255, 255);
   background-position: center;
   background-size: cover;
-  /* background-color: rgb(43, 43, 43); */
-  /* background: linear-gradient(to bottom, #333, #333 50%, #eee 75%, #333 75%); */
-  /* background: linear-gradient( #000000, white, black, #880000); */
   flex-wrap: wrap;
-  /* border: solid black 5px; */
   padding: 20px;
   background: transparent;
-  /* background: linear-gradient( white, black, white); */
-
 }
 
 .food-items-toppings{
   display: flex;
   justify-content: center;
   gap: 30px;
-  /* background-image: url('https://images.unsplash.com/photo-1588001291548-948f55922bfd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHJhbWVufGVufDB8MHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60'); */
   background-color: rgb(255, 255, 255);
   background-position: center;
   background-size: cover;
-  /* background-color: rgb(43, 43, 43); */
-  /* background: linear-gradient(to bottom, #333, #333 50%, #eee 75%, #333 75%); */
-  /* background: linear-gradient( #000000, white, black, #880000); */
   flex-wrap: wrap;
   padding: 20px;
   background: transparent;
-  /* background: linear-gradient( white, black, white); */
-
 }
-
-
-
-
-
 
 .image-container {
   position: relative;
@@ -632,60 +554,28 @@ footer{
   text-align: center;
 }
 
-
-
-
-
-
  /* Gallery container */
- .gallery {
+ .gallery-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 20px;
-}
-
-/* Gallery item */
-.gallery-item {
-  margin: 10px;
-}
-
-/* Responsive image */
-.gallery-item img {
-  width: 100%;
-  height: auto;
-}
-
-/* Media queries for responsiveness */
-@media screen and (min-width: 480px) {
-  .gallery-item {
-    flex-basis: 50%;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .gallery-item {
-    flex-basis: 33.33%;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .gallery-item {
-    flex-basis: 25%;
-  }
+  flex-direction: column;
 }
 
 
 
 
-
-
-
-.row{
+.gallery{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   background-color: black;
-  width: 700px;
+  width: 600px;
   height: 500px;
   overflow: scroll;
+  border-radius:10px;
+
 }
 
 .column{
@@ -698,9 +588,9 @@ footer{
 
 
 @media screen and (max-width: 720px) {
-  .row{
+  .gallery{
     max-width: 330px;
-    justify-content: flex-start;
+    justify-content: center;
     padding: 0 10px;
     overflow-x: scroll;
   }
