--- a/style.css
+++ b/style.css
@@ -25,53 +25,16 @@ nav {
   height: fit-content;
 }
 
+
+
 /* Initial styles for the logo */
 #logo {
   width: 200px;
-  /* height: auto; */
   height: 114px;
-  transition: width 0.3s ease-in-out; /* Add a transition effect */
+  transition: width 0.3s ease-in-out; 
   cursor: pointer;
 }
 
-/* @keyframes smokeAnimation {
-  0% { opacity: 0; transform: translateY(0); }
-  100% { opacity: 1; transform: translateY(-100px); }
-}
-
-#logo-container {
-  position: relative;
-  width: 200px; 
-  height: 200px;
-}
-
-#logo {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  z-index: 1;
-}
-
-.smoke {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 200px; 
-  height: 200px;
-  background-image: url(https://images.unsplash.com/photo-1602410086232-0cdfb78b434f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8c21va2V8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60); 
-  background-size: cover;
-  opacity: 0;
-  animation: smokeAnimation 2s linear infinite;
-} */
-
-/* Styles for the smaller logo */
-/* #logo.shrink {
-  width: 100px;
-} */
 
 .page-links {
   display: flex;
@@ -117,27 +80,71 @@ color: black;
   height: 100%;
 }
 
+main{
+  background: linear-gradient( white, black, white);
+/* padding: 20px; */
+}
+
+#home-nav {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 10px;
+  overflow-x: auto;
+  text-align: center;
+  position: sticky;
+  top: 0;
+  background-color: rgb(255, 255, 255);
+ 
+
+}
+
+#home-nav ul { 
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  white-space: nowrap; /* Prevent line breaks */
+}
+
+#home-nav li {
+  display: inline-block;
+  color: rgb(0, 0, 0);
+  position: sticky;
+  top: 0;
+
+}
+
+#home-nav li:hover{
+  color: rgb(153, 0, 0);
+}
+
+#home-nav span {
+  margin: 0 5px; /* Adjust the spacing between the separator and the list item */
+}
+
+@media screen and (max-width: 637px) {
+  #home-nav {
+    max-width: 100%;
+    justify-content: flex-start;
+    padding: 0 10px;
+    overflow-x: scroll;
+  }
+}
+
 .welcome-message{
  
-  background-color: rgb(110, 0, 0);
-  /* background-color: rgb(137, 8, 8); */
-  /* background-color: rgb(238, 238, 238); */
-  color: rgb(255, 255, 255);
-  font-size: 54px;
+  /* background-color: rgb(110, 0, 0); */
+  background-color: rgb(144, 0, 0);
+  /* font-size: 54px; */
   padding: 20px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   /* border-bottom: black solid; */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  background-image: url('');
-  background-position: center;
-
-  background-size: cover;
-
-  background-position: center;
-  object-fit: cover;
-  border-top: rgb(255, 255, 255) solid 1px;
+  /* background-color: white; */
+  border-bottom: black solid;
+  color: rgb(255, 255, 255);
+  text-decoration: underline;
 }
-
 
 
 
@@ -145,11 +152,13 @@ color: black;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  /* width: 500px; */
+
   flex-wrap: wrap-reverse;
   border-bottom: solid black 1px;
   background-image: url('images/noodles.jpg');
   background-position: center;
-  margin-top: -7px
+  /* margin-top: -7px */
 }
 
 .ramen-png{
@@ -163,7 +172,7 @@ color: black;
   text-align: center;
   font-weight: 900;
   font-family: arial;
-  font-size: 65px;
+  /* font-size: 65px; */
   padding: 20px;
   width: 500px;
   height: 270px;
@@ -282,6 +291,10 @@ background: linear-gradient( white, black);
   background-color: rgb(0, 0, 0);
 }
 
+section{
+  margin-bottom: 100px;
+}
+
 
 
 
@@ -352,17 +365,17 @@ z-index: 1;
   bottom: 0;
   right: 0;
   margin: 12px;
-  /* margin-right: 110px; */
   font-size: 26px;
   color: rgb(30, 193, 98);
   transition: color 300ms;
   z-index: 3;
-
 }
 
 
-.phone-color:hover, .facebook:hover, .instagram:hover, .yelp-color:hover{
-  color: rgb(177, 0, 0);
+.instagram2:hover, .facebook:hover, .instagram:hover, .yelp-color:hover{
+  /* color: rgb(177, 0, 0); */
+  /* transform: rotate(-0.25turn); */
+  color: aliceblue;
 }
 
 
@@ -589,6 +602,7 @@ z-index: 1;
   justify-content: center;
   align-items: center;
   background-color: black;
+  background-color: rgb(255, 255, 255);
   width: 600px;
   height: 500px;
   overflow: scroll;
