--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Akronim&family=New+Rocker&family=Playfair:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Playfair:wght@300&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Pathway+Gothic+One&family=Playfair:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 html,
 body {
   margin: 0;
@@ -68,6 +68,18 @@ figure {
   background-image: url("images/dish1.jpg");
   background-size: cover;
   background-position: center;
+}
+
+.over-lay {
+  /* font-family: "New Rocker", cursive; */
+  font-family: serif;
+  font-weight: 700;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.437);
+  color: rgb(255, 255, 255);
+  width: 100%;
+  font-family: "New Rocker", cursive;
+
 }
 
 .ol{
@@ -144,6 +156,12 @@ main{
   border-bottom: black solid;
   color: rgb(255, 255, 255);
   text-decoration: underline;
+  font-size: 5vw;
+  font-family: "New Rocker", cursive;
+  
+  font-family: serif;
+  /* font-family: 'Montserrat', sans-serif; */
+  font-weight: 700;
 }
 
 
@@ -156,15 +174,20 @@ main{
 
   flex-wrap: wrap-reverse;
   border-bottom: solid black 1px;
-  background-image: url('images/noodles.jpg');
+  background-image: url('images/dish1.jpg');
   background-position: center;
-  /* margin-top: -7px */
+  background-size: cover;
+  margin-top: -10px;
+  border-top:solid black 2px ;
+  min-height: 300px;
 }
 
 .ramen-png{
-  width: 650px;
+  position: absolute;
+  z-index: 0;
+  width: 1000px;
   height: 550px;
-  margin-top: -90px;
+  margin-left: -800px;
   padding: 20px;
 }
 
@@ -174,10 +197,12 @@ main{
   font-family: arial;
   /* font-size: 65px; */
   padding: 20px;
-  width: 500px;
-  height: 270px;
+  /* width: 500px;
+  height: 270px; */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   color: white;
+  font-size: 3vw;
+
 }
 
 @media screen and (max-width: 990px) {
@@ -194,10 +219,10 @@ main{
   }
 
   .ramen-png{
-    height: 320px;
-    width: 360px;
+    height: 620px;
+    width: 760px;
     padding-left: 0;
-    margin-top: -81px;
+    margin-left: -81px;
    
   }
 
@@ -223,22 +248,32 @@ background: linear-gradient( white, black);
 
 }
 
+.business-hours-container{
+  z-index: 1;
+  border: solid 1px rgb(135, 135, 135);
+  height: fit-content;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+}
 
+.h2-business-hours{
+  border-radius: 10px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
 
 .business-hours {
   display: flex;
   flex-direction: column;
   width: min-content;
   gap: 10px;
-  background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   padding: 10px;
-  border-radius: 10px;
   width: 330px;
   height: min-content;
   font-family: "New Rocker", cursive;
-  border: solid 1px rgb(135, 135, 135);
   font-size: 18px;
+  margin-top: -10px;
 }
 
 .category{
@@ -264,21 +299,22 @@ background: linear-gradient( white, black);
   object-fit:cover;
 }
 
-.over-lay {
-  font-family: "New Rocker", cursive;
-  font-weight: 100;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.437);
-  color: rgb(255, 255, 255);
-  width: 100%;
+.map-container{
+  z-index: 1;
+  background-color: rgb(182, 0, 0);
+  height: fit-content;
+  height: 389px;
+  border-radius: 10px;
 }
 
-.map-container{
-  
+.h2-location{
+  color: white;
 }
 
 .map{
   border-radius: 10px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
   width: 330px;
   height: 350px;
   background-color: rgb(96, 96, 96);
@@ -591,10 +627,20 @@ z-index: 1;
   flex-wrap: wrap;
   justify-content: center;
   flex-direction: column;
+  background-color: black;
+  border-top-left-radius:10px;
+  border-top-right-radius:10px;
+  border: solid;
 }
 
 
-
+.h2-gallery{
+  /* background-color: black; */
+  color: white;
+  background-color: rgb(0, 0, 0);
+  border-top-left-radius:10px;
+  border-top-right-radius:10px;
+}
 
 .gallery{
   display: flex;
@@ -602,11 +648,13 @@ z-index: 1;
   justify-content: center;
   align-items: center;
   background-color: black;
-  background-color: rgb(255, 255, 255);
   width: 600px;
   height: 500px;
   overflow: scroll;
   border-radius:10px;
+  border-top-left-radius:0px;
+  border-top-right-radius:0px;
+  margin-top: -6px;
 
 }
 
@@ -648,6 +696,11 @@ z-index: 1;
   cursor: pointer;
 }
 
+img.modal-trigger{
+  width: 200px;
+  height: 200px;
+}
+
 
 
 @media screen and (max-width: 720px) {
@@ -656,6 +709,10 @@ z-index: 1;
     justify-content: center;
     padding: 0 10px;
     overflow-x: scroll;
+  }
+  img.modal-trigger{
+    width: 150px;
+    height: 150px;
   }
 }
 
