--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ color: black;
 main{
   background: linear-gradient( white, black, white);
 /* padding: 20px; */
-/* overflow-x: hidden; */
+
 
 }
 
@@ -162,7 +162,7 @@ main{
   font-family: "New Rocker", cursive;
   
   font-family: serif;
-  /* font-family: 'Montserrat', sans-serif; */
+
   font-weight: 700;
 }
 
@@ -172,8 +172,6 @@ main{
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* width: 500px; */
-
   flex-wrap: wrap-reverse;
   border-bottom: solid black 1px;
   background-image: url('images/dish1.jpg');
@@ -191,16 +189,14 @@ main{
   height: 550px;
   margin-left: -800px;
   padding: 20px;
+  /* overflow-x: hidden; */
 }
 
 .section-one-h1{
   text-align: center;
   font-weight: 900;
   font-family: arial;
-  /* font-size: 65px; */
   padding: 20px;
-  /* width: 500px;
-  height: 270px; */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   color: white;
   font-size: 3vw;
@@ -220,13 +216,20 @@ main{
     font-size: 8vw;
   }
 
-  .ramen-png{
-    height: 620px;
-    width: 760px;
+  img.ramen-png{
+    height: 300px;
+    width: 400px;
     padding-left: 0;
     margin-left: -81px;
-   
+    overflow-x: hidden;
+    display: none;
   }
+
+ 
+
+  
+
+
 
   .section-one-h1{
     font-weight: 600;
@@ -247,7 +250,6 @@ main{
 background-position: center;
 background-size: cover;
 background: linear-gradient( white, black);
-overflow-x: hidden;
 }
 
 .business-hours-container{
@@ -330,7 +332,8 @@ overflow-x: hidden;
 }
 
 section{
-  margin-bottom: 100px;
+  margin-bottom: 70px;
+  overflow-x: hidden;
 }
 
 
