--- a/style.css
+++ b/style.css
@@ -79,8 +79,8 @@ figure {
   background-color: rgba(0, 0, 0, 0.437);
   color: rgb(255, 255, 255);
   width: 100%;
-  /* font-family: "New Rocker", cursive; */
-  /* font-family: 'Kaushan Script', cursive; */
+  font-family: "New Rocker", cursive;
+  font-family: 'Kaushan Script', cursive;
 
 }
 
@@ -96,7 +96,7 @@ color: black;
 
 main{
   background: linear-gradient( white, black, white);
-/* padding: 20px; */
+/* padding: 10px; */
 
 
 }
@@ -111,6 +111,9 @@ main{
   position: sticky;
   top: 0;
   background-color: rgb(255, 255, 255);
+  margin-top: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
  
 
 }
@@ -150,35 +153,39 @@ main{
 
 
 .welcome-message{
- 
+  /* margin-left: 20px;
+  margin-right: 20px; */
   /* background-color: rgb(110, 0, 0); */
   background-color: rgb(144, 0, 0);
   /* font-size: 54px; */
-  padding: 20px;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding: 5px 20px;
+  /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
   /* border-bottom: black solid; */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   /* background-color: white; */
   border-bottom: black solid;
-  color: rgb(255, 255, 255);
+  /* background-color: white; */
+  /* color: rgb(255, 255, 255); */
   text-decoration: underline;
   font-size: 5vw;
-  font-family: "New Rocker", cursive;
-  
-  font-family: serif;
-  font-family: fantasy;
-  font-family: cursive;
   font-family: 'Kaushan Script', cursive;
   font-weight: 100;
+  /* border-top: 1px black solid; */
+  background-color: rgba(255, 255, 255, 0.777);
+  color: black;
 }
 
 .section-one{
+  /* margin-left: 30px;
+  margin-right: 30px; */
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap-reverse;
   border-bottom: solid black 1px;
   background-image: url('images/dish1.jpg');
+  background-image: url('images/redramen.jpg') ;
+
   background-position: center;
   background-size: cover;
   margin-top: -10px;
@@ -220,13 +227,13 @@ main{
     font-size: 8vw;
   }
 
-  img.ramen-png{
+  /* img.ramen-png{
     height: 300px;
     width: 400px;
     padding-left: 0;
     overflow-x: hidden;
     
-  }
+  } */
 
   .section-one-h1{
     font-weight: 600;
@@ -268,6 +275,7 @@ main{
 background-position: center;
 background-size: cover;
 background: linear-gradient( white, black);
+margin-bottom: 58px;
 }
 
 .business-hours-container{
@@ -276,6 +284,7 @@ background: linear-gradient( white, black);
   height: fit-content;
   border-radius: 10px;
   background-color: rgb(255, 255, 255);
+  opacity: 0.9;
 }
 
 .h2-business-hours{
@@ -322,6 +331,7 @@ background: linear-gradient( white, black);
 }
 
 .map-container{
+  opacity: 0.9;
   z-index: 1;
   background-color: rgb(182, 0, 0);
   height: fit-content;
