--- a/style.css
+++ b/style.css
@@ -112,8 +112,8 @@ main{
   top: 0;
   background-color: rgb(255, 255, 255);
   margin-top: 15px;
-  margin-left: 20px;
-  margin-right: 20px;
+  /* margin-left: 10px;
+  margin-right: 10px; */
  
 
 }
@@ -155,23 +155,17 @@ main{
 .welcome-message{
   /* margin-left: 20px;
   margin-right: 20px; */
-  /* background-color: rgb(110, 0, 0); */
-  background-color: rgb(144, 0, 0);
-  /* font-size: 54px; */
+ 
   padding: 5px 20px;
-  /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-  /* border-bottom: black solid; */
+ 
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  /* background-color: white; */
+  background-color: white;
   border-bottom: black solid;
-  /* background-color: white; */
-  /* color: rgb(255, 255, 255); */
-  text-decoration: underline;
   font-size: 5vw;
   font-family: 'Kaushan Script', cursive;
   font-weight: 100;
   /* border-top: 1px black solid; */
-  background-color: rgba(255, 255, 255, 0.777);
+  /* background-color: rgba(255, 255, 255, 0.777); */
   color: black;
 }
 
@@ -302,7 +296,8 @@ margin-bottom: 58px;
   padding: 10px;
   width: 330px;
   height: min-content;
-  font-family: "New Rocker", cursive;
+  /* font-family: "New Rocker", cursive; */
+  font-family: 'Kaushan Script';
   font-size: 18px;
   margin-top: -10px;
 }
@@ -341,6 +336,8 @@ margin-bottom: 58px;
 
 .h2-location{
   color: white;
+  padding-top: 2px;
+  padding-bottom: 0px;
 }
 
 .map{
@@ -351,6 +348,7 @@ margin-bottom: 58px;
   height: 350px;
   background-color: rgb(96, 96, 96);
   padding: 1px;
+  margin-top: -10px;
 }
 
 .copy-right{
