--- a/style.css
+++ b/style.css
@@ -11,6 +11,29 @@ body {
   background-color: rgb(0, 0, 0);
 }
 
+.fade-in-element-scroll {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+.fade-in-element-scroll.is-visible {
+  opacity: 1;
+}
+
+.fade-in-element {
+  opacity: 0;
+  animation: fade-in 1s ease-in forwards;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+
 nav {
   background-color: black;
   display: flex;
@@ -246,6 +269,10 @@ main{
 
   .section-one{
     background-image: url('https://images.unsplash.com/photo-1613232683444-de0a4942e932?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjIzfHxub29kbGUlMjByYW1lbnxlbnwwfDB8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60') ;
+  }
+
+  img #carousel-one{
+    background-image: url('images/redramen.jpg') ;
   }
 
   img.ramen-png{
