--- a/style.css
+++ b/style.css
@@ -373,6 +373,7 @@ margin-bottom: 58px;
   height: fit-content;
   height: 380px;
   border-radius: 10px;
+  transition: opacity 200ms ease-in;
 }
 
 .h2-location{
@@ -390,6 +391,10 @@ margin-bottom: 58px;
   background-color: rgb(96, 96, 96);
   padding: 1px;
   margin-top: -10px;
+}
+
+.map-container:hover {
+  opacity: 1;
 }
 
 .copy-right{
@@ -749,8 +754,10 @@ z-index: 1;
   justify-content: center;
   align-items: center;
   background-color: black;
-  width: 600px;
-  height: 500px;
+  /* width: 600px;
+  height: 500px; */
+  width: 616px;
+  height: 524px;
   overflow: scroll;
   border-radius:10px;
   border-top-left-radius:0px;
